 * <rdar://problem/48563792> CASSANDRA-15005 Allow custom functions
 * <rdar://problem/51060248> (Apple Internal) Remove token range check for PREPARE repair messages
 * <rdar://problem/50721377> Apparent direct buffer leak causing OOMs on low traffic clusters (CASSANDRA-15126)
 * <rdar://problem/54408043> Gemini performance fixes for hadoop mapreduce

3.0.19
 * Update token metadata when handling MOVING/REMOVING_TOKEN events (CASSANDRA-15120)
 * cassandra-stress works with frozen collections: list and set (CASSANDRA-14907)
 * Fix handling FS errors on writing and reading flat files - LogTransaction and hints (CASSANDRA-15053)
 * Avoid double closing the iterator to avoid overcounting the number of requests (CASSANDRA-15058)
 * Improve `nodetool status -r` speed (CASSANDRA-14847)
 * Improve merkle tree size and time on heap (CASSANDRA-14096)
Merged from 2.2:
 * Support cross version messaging in in-jvm upgrade dtests (CASSANDRA-15078)
 * Refactor Circle CI configuration (CASSANDRA-14806)
 * Fixing invalid CQL in security documentation (CASSANDRA-15020)
 * Multi-version in-JVM dtests (CASSANDRA-14937)
 * Reduce heap pressure during compactions (CASSANDRA-14654)
 * Avoid creating KeyCacheKey instance when key cache is disabled (CASSANDRA-13084)
 * Allow instance class loaders to be garbage collected for inJVM dtest (CASSANDRA-15170)

3.0.18.0
 * Add a script to make running the cqlsh tests in cassandra repo easier (CASSANDRA-14951)
 * If SizeEstimatesRecorder misses a 'onDropTable' notification, the size_estimates table will never be cleared for that table. (CASSANDRA-14905)
 * Fix cassandra-stress write hang with default options (CASSANDRA-14616)
 * Backport: Flush netty client messages immediately (not by default) (CASSANDRA-13651)
 * CommitLogReplayer.handleReplayError should print stack traces (CASSANDRA-14589)
 * Netty epoll IOExceptions caused by unclean client disconnects being logged at INFO (CASSANDRA-14909)