@@ -326,6 +326,7 @@ rdar://67259599 CASSANDRA-15637: size estimate table broke python dtests
  * <rdar://problem/54408043> Gemini performance fixes for hadoop mapreduce
 
 3.0.19
+ * Throw IOE instead of asserting on unsupporter peer versions (CASSANDRA-15066)
  * Update token metadata when handling MOVING/REMOVING_TOKEN events (CASSANDRA-15120)
  * cassandra-stress works with frozen collections: list and set (CASSANDRA-14907)
  * Fix handling FS errors on writing and reading flat files - LogTransaction and hints (CASSANDRA-15053)
